tests/snapshots/snapshot_tests__elixir-basic-plan.snap
---
source: tests/snapshot_tests.rs
expression: plan
---
{
  "steps": [
    {
      "name": "packages:mise",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-builder:latest"
        }
      ],
      "commands": [
        {
          "path": "/mise/shims"
        },
        {
          "path": "/etc/mise/config.toml",
          "name": "mise.toml",
          "customName": "create mise config"
        },
        {
          "cmd": "mise install",
          "customName": "install mise packages: elixir, erlang"
        }
      ],
      "assets": {
        "mise.toml": "[tools.elixir]\nversion = \"1.17.0.0\"\n\n[tools.erlang]\nversion = \"27.0.0\"\n"
      },
      "variables": {
        "MISE_CACHE_DIR": "/mise/cache",
        "MISE_CONFIG_DIR": "/mise",
        "MISE_DATA_DIR": "/mise",
        "MISE_IDIOMATIC_VERSION_FILE_ENABLE_TOOLS": "python,node,ruby,elixir,go,java,yarn",
        "MISE_INSTALLS_DIR": "/mise/installs",
        "MISE_NODE_VERIFY": "false",
        "MISE_PARANOID": "1",
        "MISE_SHIMS_DIR": "/mise/shims",
        "MISE_TRUSTED_CONFIG_PATHS": "/app"
      }
    },
    {
      "name": "install",
      "inputs": [
        {
          "step": "packages:mise"
        }
      ],
      "commands": [
        {
          "cmd": "mkdir -p config deps _build"
        },
        {
          "cmd": "mix local.hex --force"
        },
        {
          "cmd": "mix local.rebar --force"
        },
        {
          "src": "mix.exs",
          "dest": "mix.exs"
        },
        {
          "src": "mix.lock",
          "dest": "mix.lock"
        },
        {
          "cmd": "mix deps.get --only prod"
        },
        {
          "src": "config/config.exs*",
          "dest": "config/"
        },
        {
          "src": "config/prod.exs*",
          "dest": "config/"
        },
        {
          "cmd": "mix deps.compile"
        }
      ],
      "variables": {
        "ELIXIR_ERL_OPTIONS": "+fnu",
        "LANG": "en_US.UTF-8",
        "LANGUAGE": "en_US:en",
        "LC_ALL": "en_US.UTF-8",
        "MIX_ARCHIVES": "/root/.mix/archives",
        "MIX_ENV": "prod",
        "MIX_HOME": "/root/.mix"
      }
    },
    {
      "name": "build",
      "inputs": [
        {
          "step": "packages:mise"
        },
        {
          "include": [
            "deps",
            "_build",
            "config",
            "mix.exs",
            "mix.lock",
            "/root/.mix"
          ],
          "step": "install"
        }
      ],
      "commands": [
        {
          "src": "priv*",
          "dest": "."
        },
        {
          "src": "lib*",
          "dest": "."
        },
        {
          "src": "assets*",
          "dest": "."
        },
        {
          "src": "config/runtime.exs*",
          "dest": "config/"
        },
        {
          "cmd": "mix compile"
        },
        {
          "src": "rel*",
          "dest": "."
        },
        {
          "cmd": "mix release"
        }
      ],
      "secrets": [
        "*"
      ],
      "variables": {
        "ELIXIR_ERL_OPTIONS": "+fnu",
        "LANG": "en_US.UTF-8",
        "LANGUAGE": "en_US:en",
        "LC_ALL": "en_US.UTF-8",
        "MIX_ARCHIVES": "/root/.mix/archives",
        "MIX_ENV": "prod",
        "MIX_HOME": "/root/.mix"
      }
    }
  ],
  "deploy": {
    "base": {
      "image": "ghcr.io/railwayapp/railpack-runtime:latest"
    },
    "inputs": [
      {
        "include": [
          "_build/prod/rel"
        ],
        "step": "build"
      }
    ],
    "startCommand": "/app/_build/prod/rel/my_app/bin/my_app start",
    "variables": {
      "ELIXIR_ERL_OPTIONS": "+fnu",
      "LANG": "en_US.UTF-8",
      "LANGUAGE": "en_US:en",
      "LC_ALL": "en_US.UTF-8",
      "MIX_ARCHIVES": "/root/.mix/archives",
      "MIX_ENV": "prod",
      "MIX_HOME": "/root/.mix"
    }
  }
}
