tests/snapshots/snapshot_tests__go-workspace-plan.snap
---
source: tests/snapshot_tests.rs
expression: plan
---
{
  "steps": [
    {
      "name": "packages:mise",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-builder:latest"
        }
      ],
      "commands": [
        {
          "path": "/mise/shims"
        },
        {
          "path": "/etc/mise/config.toml",
          "name": "mise.toml",
          "customName": "create mise config"
        },
        {
          "cmd": "mise install",
          "customName": "install mise packages: go"
        }
      ],
      "assets": {
        "mise.toml": "[tools.go]\nversion = \"1.25.0.0\"\n"
      },
      "variables": {
        "MISE_CACHE_DIR": "/mise/cache",
        "MISE_CONFIG_DIR": "/mise",
        "MISE_DATA_DIR": "/mise",
        "MISE_IDIOMATIC_VERSION_FILE_ENABLE_TOOLS": "python,node,ruby,elixir,go,java,yarn",
        "MISE_INSTALLS_DIR": "/mise/installs",
        "MISE_NODE_VERIFY": "false",
        "MISE_PARANOID": "1",
        "MISE_SHIMS_DIR": "/mise/shims",
        "MISE_TRUSTED_CONFIG_PATHS": "/app"
      }
    },
    {
      "name": "install",
      "inputs": [
        {
          "step": "packages:mise"
        }
      ],
      "commands": [
        {
          "path": "/go/bin"
        },
        {
          "src": "go.work",
          "dest": "go.work"
        },
        {
          "src": "app/go.mod",
          "dest": "app/go.mod"
        },
        {
          "cmd": "go mod download"
        }
      ],
      "secrets": [
        "*"
      ],
      "variables": {
        "CGO_ENABLED": "0",
        "GOBIN": "/go/bin",
        "GOPATH": "/go"
      },
      "caches": [
        "go-build"
      ]
    },
    {
      "name": "build",
      "inputs": [
        {
          "step": "install"
        },
        {
          "include": [
            "."
          ],
          "local": true
        }
      ],
      "commands": [
        {
          "cmd": "go build -ldflags=\"-w -s\" -o out ./app"
        }
      ],
      "secrets": [
        "*"
      ],
      "caches": [
        "go-build"
      ]
    },
    {
      "name": "packages:apt:runtime",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-runtime:latest"
        }
      ],
      "commands": [
        {
          "cmd": "sh -c 'apt-get update && apt-get install -y tzdata'",
          "customName": "install apt packages: tzdata"
        }
      ],
      "caches": [
        "apt",
        "apt-lists"
      ]
    }
  ],
  "caches": {
    "apt": {
      "directory": "/var/cache/apt",
      "type": "locked"
    },
    "apt-lists": {
      "directory": "/var/lib/apt/lists",
      "type": "locked"
    },
    "go-build": {
      "directory": "/root/.cache/go-build",
      "type": "shared"
    }
  },
  "deploy": {
    "base": {
      "step": "packages:apt:runtime"
    },
    "inputs": [
      {
        "include": [
          "."
        ],
        "step": "build"
      }
    ],
    "startCommand": "./out"
  }
}
