tests/snapshots/snapshot_tests__java-maven-plan.snap
---
source: tests/snapshot_tests.rs
expression: plan
---
{
  "steps": [
    {
      "name": "packages:mise",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-builder:latest"
        }
      ],
      "commands": [
        {
          "path": "/mise/shims"
        },
        {
          "path": "/etc/mise/config.toml",
          "name": "mise.toml",
          "customName": "create mise config"
        },
        {
          "cmd": "mise install",
          "customName": "install mise packages: java, maven"
        }
      ],
      "assets": {
        "mise.toml": "[tools.java]\nversion = \"21.0.0\"\n\n[tools.maven]\nversion = \"latest.0.0\"\n"
      },
      "variables": {
        "MISE_CACHE_DIR": "/mise/cache",
        "MISE_CONFIG_DIR": "/mise",
        "MISE_DATA_DIR": "/mise",
        "MISE_IDIOMATIC_VERSION_FILE_ENABLE_TOOLS": "python,node,ruby,elixir,go,java,yarn",
        "MISE_INSTALLS_DIR": "/mise/installs",
        "MISE_NODE_VERIFY": "false",
        "MISE_PARANOID": "1",
        "MISE_SHIMS_DIR": "/mise/shims",
        "MISE_TRUSTED_CONFIG_PATHS": "/app"
      }
    },
    {
      "name": "packages:mise:runtime",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-builder:latest"
        }
      ],
      "commands": [
        {
          "path": "/mise/shims"
        },
        {
          "path": "/etc/mise/config.toml",
          "name": "mise.toml",
          "customName": "create mise config"
        },
        {
          "cmd": "mise install",
          "customName": "install mise packages: java"
        }
      ],
      "assets": {
        "mise.toml": "[tools.java]\nversion = \"21.0.0\"\n"
      },
      "variables": {
        "MISE_CACHE_DIR": "/mise/cache",
        "MISE_CONFIG_DIR": "/mise",
        "MISE_DATA_DIR": "/mise",
        "MISE_IDIOMATIC_VERSION_FILE_ENABLE_TOOLS": "python,node,ruby,elixir,go,java,yarn",
        "MISE_INSTALLS_DIR": "/mise/installs",
        "MISE_NODE_VERIFY": "false",
        "MISE_PARANOID": "1",
        "MISE_SHIMS_DIR": "/mise/shims",
        "MISE_TRUSTED_CONFIG_PATHS": "/app"
      }
    },
    {
      "name": "build",
      "inputs": [
        {
          "step": "packages:mise"
        },
        {
          "include": [
            "."
          ],
          "local": true
        }
      ],
      "commands": [
        {
          "cmd": "mvn -DoutputFile=target/mvn-dependency-list.log -B -DskipTests clean dependency:list install -Pproduction"
        }
      ],
      "secrets": [
        "*"
      ],
      "caches": [
        "maven"
      ]
    }
  ],
  "caches": {
    "maven": {
      "directory": ".m2/repository",
      "type": "shared"
    }
  },
  "deploy": {
    "base": {
      "image": "ghcr.io/railwayapp/railpack-runtime:latest"
    },
    "inputs": [
      {
        "include": [
          "/mise/shims",
          "/mise/installs",
          "/usr/local/bin/mise",
          "/etc/mise/config.toml",
          "/root/.local/state/mise"
        ],
        "step": "packages:mise:runtime"
      },
      {
        "include": [
          "."
        ],
        "step": "build"
      }
    ],
    "startCommand": "java -Dserver.port=$PORT $JAVA_OPTS -jar target/*jar"
  }
}
